--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
         <div class="see-all">
 
-            <a href="https://codepen.io/sagarbudhwani">
+            <a href="https://codepen.io/your-work/">
                 <button>
                     See All
                 </button>
