--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Sudheer, debbati, Sudheer debbati">
     <title>Sudheer debbati Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="https://sagarbudhwani.github.io/Personal-Portfolio/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -130,11 +130,11 @@
                 </div>
             </a>
 
-            <a class="" href="https://codepen.io/sagarbudhwani/full/LYdGjjM">
+            <a class="" href="">
 
                 <div class="project">
                     <h2 class="project-tile">
-                        Bullseye Game
+                        Hello
                     </h2>
 
                 </div>
@@ -161,7 +161,7 @@
             <h1>About Me</h1>
             <p>I am Full-stack web developer with Expertise in Python from India.</p>
             <p>I enjoy taking up complex problems and turning them into simple and beautiful interface designs. I also
-                love logic and structure of coding and alway strive to white elegant and efficient code, weather it be
+                love logic and structure of coding and always strive to white elegant and efficient code, weather it be
                 HTML, CSS, JavaScript or python. I have
                 been
                 coding when I was at age of 20. Now it has been <span id="year"></span> years
@@ -187,7 +187,7 @@
         </div>
 
     </section>
-    <script src="https://sagarbudhwani.github.io/Personal-Portfolio/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
