--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
         <div class="about-con">
             <h1>About Me</h1>
-            <p>I am Full-stack web developer with Expertise in Python from India.</p>
+            <p>I am Full-stack web developer with Expertise in Python from Mancherial.</p>
             <p>I enjoy taking up complex problems and turning them into simple and beautiful interface designs. I also
                 love logic and structure of coding and always strive to white elegant and efficient code, weather it be
                 HTML, CSS, JavaScript or python. I have
