--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                 </div>
             </a>
 
-            <a class="" href="">
+            <a class="" href="https://debbatisudheer.github.io/weather-analysis/">
 
                 <div class="project">
                     <h2 class="project-tile">
-                        Hello
+                        Weather data analysis
                     </h2>
 
                 </div>
@@ -159,7 +159,7 @@
 
         <div class="about-con">
             <h1>About Me</h1>
-            <p>I am Full-stack web developer with Expertise in Python from Mancherial.</p>
+            <p>I am Full-stack web developer with Expertise in Python from India.</p>
             <p>I enjoy taking up complex problems and turning them into simple and beautiful interface designs. I also
                 love logic and structure of coding and always strive to white elegant and efficient code, weather it be
                 HTML, CSS, JavaScript or python. I have
