--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                 </div>
             </a>
 
-            <a href="https://debbatisudheer.github.io/ayodhya1/">
+            <a href="https://debbatisudheer.github.io/python-work/">
 
                 <div class="project">
                     <h2 class="project-tile">
-                        Ayodhya
+                        Python
                     </h2>
 
                 </div>
