--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                 </div>
             </a>
 
-            <a class="" href="https://codepen.io/Sudheer-Debbati/pen/xxBbMPJ">
+            <a class="" href="https://debbatisudheer.github.io/projects-work/">
 
                 <div class="project">
                     <h2 class="project-tile">
-                        Pocket-money
+                        Projects
                     </h2>
 
                 </div>
