--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
                 </div>
             </a>
 
-            <a class="" href="https://debbatisudheer.github.io/diabetes_s/">
+            <a class="" href="https://sudheerdebbatinsights.blogspot.com/">
 
                 <div class="project">
                     <h2 class="project-tile">
-                        Diabetes prediction
+                        Blog
                     </h2>
 
                 </div>
