--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
 
         <div class="see-all">
 
-            <a href="https://codepen.io/your-work/">
+            <a href="https://debbatisudheer.github.io/DSA/">
                 <button>
-                    See All
+                    DSA
                 </button>
             </a>
 
