--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
                 </div>
             </a>
 
-            <a class="" href="https://debbati.pythonanywhere.com/">
+            <a class="" href="https://debbatisudheer.github.io/ML-AI-DL/">
 
                 <div class="project">
 
                     <h2 class="project-tile">
-                        Marks
+                        ML/AI/DL
                     </h2>
 
                 </div>
