--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             </div>
             <h1>I'm Sudheer debbati</h1>
-            <p>Full-stack web developer with Expertise in Python.</p>
+            <p>Full-stack developer with Expertise in Python/ML/AI/DL.</p>
 
             <p class="quote"> In the land of screens and buttons, coders are the wizards - waving their digital wands to make the magic of our tech-filled world come to life.</p>
 
@@ -159,10 +159,10 @@
 
         <div class="about-con">
             <h1>About Me</h1>
-            <p>I am Full-stack web developer with Expertise in Python from India.</p>
-            <p>I enjoy taking up complex problems and turning them into simple and beautiful interface designs. I also
+            <p>I am Full-stack developer with Expertise in Python/ML/AI/DL from India.</p>
+            <p>I enjoy taking up complex problems and turning them into reality. I also
                 love logic and structure of coding and always strive to white elegant and efficient code, weather it be
-                HTML, CSS, JavaScript or python. I have
+                HTML, CSS, JavaScript, python or ML/AI/DL. I have
                 been
                 coding when I was at age of 20. Now it has been <span id="year"></span> years
             </p>
