--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <h1>About Me</h1>
             <p>I am Full-stack developer with Expertise in Python/ML/AI/DL from India.</p>
             <p>I enjoy taking up complex problems and turning them into reality. I also
-                love logic and structure of coding and always strive to white elegant and efficient code, weather it be
+                love logic and structure of coding and always strive to write elegant and efficient code, weather it be
                 HTML, CSS, JavaScript, python or ML/AI/DL. I have
                 been
                 coding when I was at age of 20. Now it has been <span id="year"></span> years
