--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                 </div>
             </a>
 
-            <a class="" href="https://debbatisudheer.github.io/weather-analysis/">
+            <a class="" href="">
 
                 <div class="project">
                     <h2 class="project-tile">
-                        Weather data analysis
+                        Quantum 
                     </h2>
 
                 </div>
