--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 
         <div class="projects-container">
 
-            <a href="https://codepen.io/Sudheer-Debbati/pen/RwEdRry">
+            <a href="">
 
                 <div class="project">
                     <h2 class="project-tile">
-                        Calculator
+                        SQL
                     </h2>
 
                 </div>
